--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -487,7 +487,7 @@
 	width: 100%;
 	position: fixed;
 	height: $default-font-size * 6.25;
-	z-index: 10;
+	z-index: 1;
 
 	@include respond(tab-port) {
 		background-color: $color-primary-1;
